# Chess

./: CMakeLists.txt  howtorun.txt
include/Chess/: bishop.h  board.h  chess_pieces.h  game.h  king.h  knight.h  move.h  pawn.h  piece.h  player.h  queen.h  rook.h  spot.h
src/: bishop.cpp  board.cpp  game.cpp  king.cpp  knight.cpp  main.cpp  move.cpp  pawn.cpp  piece.cpp  player.cpp  queen.cpp  rook.cpp  spot.cpp
